Cambio mensaje de la funcion de la pagina

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <main>
  
 <article id="arti"> 
-<p>Espacio Alternativo es un concepto original de Cinemex donde podrás disfrutar una gran variedad de contenido alterno al 7° arte, tales como: Ballet, Ópera, Eventos Deportivos, Eventos de Moda, entre otros. </p>
+<p>Lugar donde podrás seleccionar entre una gran variedad de perritos, tales como: put, labrador, salchicha, alaska, entre otros. </p>
 
 <h2>PERROS BONITOS</h2>
 
