Cambie lugar por sitio

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <main>
  
 <article id="arti"> 
-<p>Lugar donde podrás seleccionar entre una gran variedad de perritos, tales como: put, labrador, salchicha, alaska, entre otros. </p>
+<p>Sitio donde podrás seleccionar entre una gran variedad de perritos, como:labrador, salchicha, alaska, terri, entre otros. </p>
 
 <h2>PERROS BONITOS</h2>
 
